--- a/back_end/src/main/resources/templates/income.html
+++ b/back_end/src/main/resources/templates/income.html
@@ -143,7 +143,7 @@
   <div id="modal" class="modal-overlay">
     <div class="modal-window">
       <div class="title tm-text-primary">
-        <h2>EDIT</h2>
+        <h2>Income_data</h2>
       </div>
       <div class="close-area">
         <a id="modal_close_btn" class="modal_close_btn">exit</a>
@@ -151,25 +151,22 @@
       <div class="content">
         <form id="contact-form" action="" method="POST" class="tm-contact-form mx-auto">
           <div class="form-group">
-            <input type="text" name="title" class="form-control rounded-0" placeholder="Title"
-                   required/>
+            <input type="text" id="item" name="item" class="form-control rounded-0" placeholder="item" required/>
           </div>
           <div class="form-group">
-            <input type="number" name="price" class="form-control rounded-0" placeholder="Price"
-                   required/>
+            <input type="number" id="price" name="price" class="form-control rounded-0" placeholder="price" required/>
+          </div>
+          <div class="form-group">
+            <input type="date" id="income_time" name="income_time" class="form-control rounded-0" required/>
           </div>
           <div class="form-group">
             <select class="form-control" id="category-select" name="category-select">
-              <option value="-">Subject</option>
-              <option value="eating">Sales &amp; Marketing</option>
-              <option value="shopping">Creative Design</option>
-              <option value="culture">UI / UX</option>
+              <option value="-">Category</option>
             </select>
           </div>
           <div class="form-group">
-            <textarea rows="6" name="message" class="form-control rounded-0" placeholder="Message"></textarea>
+            <textarea rows="3" name="message" class="form-control rounded-0" placeholder="Message"></textarea>
           </div>
-
           <div class="form-group tm-text-right">
             <button type="submit" class="btn btn-primary">Submit</button>
           </div>
@@ -183,14 +180,17 @@
 <script>
   function saveAllowance() {
     const dataBean = {
-      content: $('').val()
+      "itemName": document.getElementById("item").value,
+      "incomeTime": document.getElementById('income_time').value,
+      "memo": document.getElementById('memo').value,
+      "money": document.getElementById('price').value
     };
 
     $.ajax({
       url: '',
       type: 'post',
       data: dataBean,
-    }).done(function (fragment){
+    }).done(function (fragment) {
 
     });
   }
@@ -224,10 +224,10 @@
       modal.style.display = "none"
     }
   })
-  
+
   function saveAllowanceChartData() {
     let allowance_data = {
-      itemName : document.getElementById('item_name').value,
+      itemName: document.getElementById('item_name').value,
     };
 
     console.log(allowance_data);
@@ -237,10 +237,10 @@
     $.ajax({
       url: '/category/list/income',
       type: 'GET',
-      success: function(data) {
+      success: function (data) {
         drawCategoryType(data);
       }
-    }).done(function (fragment){
+    }).done(function (fragment) {
       console.log("Get category function is end")
     });
   }
