--- a/back_end/src/main/resources/templates/income.html
+++ b/back_end/src/main/resources/templates/income.html
@@ -103,37 +103,14 @@
           <thead>
           <tr>
             <th>Index</th>
-            <th>Title</th>
-            <th>Description</th>
+            <th>Item Name</th>
+            <th>Category</th>
             <th>Price</th>
+            <th>Memo</th>
             <th>Actions</th>
           </tr>
           </thead>
-          <tbody class="table-border-bottom-0">
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>
-              <div class="dropdown">
-                <button type="button" class="btn p-0 dropdown-toggle hide-arrow"
-                        data-bs-toggle="dropdown">
-                  <i class="fa-solid fa-ellipsis"></i>
-                </button>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="javascript:void(0);">
-                    <i class="bx bx-edit-alt me-1"></i>
-                    Edit
-                  </a>
-                  <a class="dropdown-item" href="javascript:void(0);">
-                    <i class="bx bx-trash me-1"></i>
-                    Delete
-                  </a>
-                </div>
-              </div>
-            </td>
-          </tr>
+          <tbody class="table-border-bottom-0" id="data-table">
           </tbody>
         </table>
       </div>
@@ -187,6 +164,7 @@
   $(window).on("load", function () {
     $('body').addClass('loaded');
     getIncomeCategory();
+    getChartData();
   });
 
   const modal = document.getElementById('modal');
@@ -236,9 +214,35 @@
       }
     }).done(function() {
       console.log("Save chart function is end");
+      getChartData();
     })
   }
 
+  /**
+   * Data 정보 조회 함수
+   * */
+  function getChartData() {
+    $.ajax({
+      url: '/chart/data/category/type/income',
+      contentType: 'application/json',
+      type: 'GET',
+      dataType: 'json',
+      success: function (data) {
+        console.log('getChartData function is success.');
+        console.log(data);
+        drawData(data);
+      },
+      error: function () {
+        alert('Fail to get spending category');
+      }
+    }).done(function (fragment) {
+      console.log('getSpendingCategory function is end.');
+    });
+  }
+
+  /**
+   * 수입 카테고리 조회 함수
+   * */
   function getIncomeCategory() {
     $.ajax({
       url: "/category/list/income",
@@ -252,6 +256,9 @@
     });
   }
 
+  /**
+   * 카테고리 정보 그리기
+   * */
   function drawCategory(data) {
     let category_data = $("#category-select");
     category_data.empty();
@@ -263,5 +270,51 @@
     }
   }
 
+  function drawData(data) {
+    console.log("Draw data is start");
+    let divs = $('data-table');
+    divs.empty();
+    for (let index in data) {
+      let html_data = "";
+      html_data += "<tr>";
+      html_data += "<td>" + (Number(index) + 1) + "</td>";
+      html_data += "<td>" + data[index].itemName + "</td>";
+      html_data += "<td>" + data[index].category.name + "</td>";
+      html_data += "<td>" + data[index].money + "</td>";
+      html_data += "<td>" + data[index].memo + "</td>";
+      html_data += "<td>";
+      html_data += "<div>";
+      html_data += "<a style='color: #697a8d; padding: 5px' href='javascript:void("
+          + data[index].id + ");' onclick='updateData(\"" + data[index].id + ")'>"
+      html_data += "<i class='fas fa-edit'></i>"
+      html_data += "</a>";
+      html_data += "<a style='color: #697a8d; padding: 5px' href='javascript:void("
+          + data[index].id + ");' onclick='deleteData(" + data[index].id + ")'>";
+      html_data += "<i class='fas fa-trash mr-2'></i>";
+      html_data += "</a>";
+      html_data += "</div>";
+      html_data += "<td>";
+      html_data += "</tr>";
+      divs.append(html_data);
+    }
+  }
+
+  function deleteData(id) {
+    $.ajax({
+      url: "/chart/data",
+      type: "DELETE",
+      contentType : "application/json",
+      data: {"id": id },
+      success: function () {
+        console.log("Delete data is success");
+      }
+    }).done(function () {
+      console.log("Delete data function is end");
+    });
+  }
+
+  function updateData(id) {
+
+  }
 </script>
 </html>
